<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".sample.activities.DeepLinkIntegrationActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="12dp"
        android:text="@string/select_option"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <Button
                android:id="@+id/dl_checkout_button"
                style="@style/PrimaryActionButton"
                android:text="@string/payment_sample" />

            <Button
                android:id="@+id/dl_print_text_button"
                style="@style/PrimaryActionButton"
                android:text="@string/print_simple_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="22dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_rectangle_rounded_borders"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/dl_print_type_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@+id/dl_print_using_absolute_path_rb"
                    android:orientation="horizontal"
                    android:paddingHorizontal="24dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="4dp">

                    <RadioButton
                        android:id="@+id/dl_print_using_absolute_path_rb"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/print_image_selector_option_1" />

                    <RadioButton
                        android:id="@+id/dl_print_using_content_provider_rb"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/print_image_selector_option_2" />

                </RadioGroup>

                <Button
                    android:id="@+id/dl_print_image_button"
                    style="@style/PrimaryActionButton"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/print_image" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>